--- a/15-html-prosta-strona/index.html
+++ b/15-html-prosta-strona/index.html
@@ -5,16 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Prosta strona</title>
+    <title>Prosta strona-15</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <nav id="menu-nawigacyjne">
-        <p><a href="#about-us" class="about">About us</a></p>
-        <p><a href="#skills" class="skills">Skills</a></p>
-        <p><a href="#portfolio" class="portfolio">Portfolio</a></p>
-        <p><a href="#contact" class="contact">Contact</a></p>
+        <ul>
+            <li><a href="#about-us" class="about">About us</a></li>
+            <li><a href="#skills" class="skills">Skills</a></li>
+            <li><a href="#portfolio" class="portfolio">Portfolio</a></li>
+            <li><a href="#contact" class="contact">Contact</a></li>
+        </ul>
     </nav>
 
     <section id="about-us">
@@ -26,43 +28,39 @@
     <section id="skills">
         <h1>Skills</h1>
         <div class="box">
-            <div class="niebiesk">niebieski kwadrat</div>
+            <div class="niebieski">niebieski kwadrat</div>
             <div class="zielony">zielony kwadrat</div>
             <div class="pomaranczowy">pomarańczowy kwadrat</div>
             <div class="czerwony">czerwony kwadrat</div>
         </div>
     </section>
+
     <section id="portfolio">
         <h1>Portfolio</h1>
-        <!-- <div style="width: 800px; height: 700px;"> -->
-            <!-- <div style="width:200px; height:200px; border-width: 5px; border-style: dotted; border-color: red;">czerwona -->
-                ramka</div>
-            <div
-                <!-- style="width:200px; height:200px; background-color:green; border-width: 5px; border-style: double; border-color: yellow;"> -->
-                żółta ramka</div>
-            <!-- <div style="width:200px; height:200px; border-width: 8px; border-style: solid; border-color: blue;"> -->
-                niebieska ramka</div>
+        <div class="box2">
+            <div class="niebieski-r"></div>
+            <div class="zielony-r"></div>
+            <div class="pomaranczowy-r"></div>
         </div>
     </section>
 
     <section id="contact">
         <h1>Iza Sawczak</h1>
         <footer>
-            <p>Contact information: <a href="mailto: izabela.ziemba@gmail.com">izabela.ziemba@gmail.com</a>.</p>
+            <p>Contact information: <a href="mailto: izabela.ziemba@gmail.com">izabela.ziemba@gmail.com.</a></p>
         </footer>
 
-        <form>
-            Imię:<br>
-            <input type="text" name="imię" required />
-            <br><br>
-            Temat:<br>
-            <input type="text" name="temat" required />
-            <br><br>
-            Wiadomość:<br>
-            <!-- <input type="text" name="wiadomość" style="width: 200px; height: 300px;" required /> -->
-            <br><br>
-            <input type="submit" value="Wyślij"
-                <!-- style="width: 200px; height: 50px; background-color: yellow; color: red;"> -->
+        <form action="" method="POST">
+            <label for="name">Imię:</label>
+            <input type="text" name="name" id="name" required>
+            <br>
+            <label for="subject">Temat:</label>
+            <input type="text" name="subject" id="subject" required>
+            <br>
+            <label for="message">Wiadomość:</label>
+            <textarea name="message" maxlength="1000" id="message" required></textarea>
+            <br>
+            <input type="submit" value="Send">
         </form>
     </section>
 
